--- a/wwwroot/dashboard.html
+++ b/wwwroot/dashboard.html
@@ -44,7 +44,9 @@
         <!-- Fiscal Period & State/Province Panel -->
         <div class="panel fiscal-panel">
             <h2>Fiscal Period & State/Province</h2>
-            <!-- Form elements removed from this section -->
+            <div id="fiscal-records-list" class="fiscal-records-container">
+                <!-- Fiscal records will be loaded dynamically -->
+            </div>
         </div>
 
         <!-- Details Panel -->
